[#472] Fix margins on mobile

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,10 +9,10 @@ $warn: #fe8a27;
 $success: #27fe4b;
 
 /* Sizes */
-$border-radius: 0.3125em;
-$padding: 1.25em;
-$spacing: 0.9375em;
-$nav: 4.375em;
+$border-radius: 0.3125rem;
+$padding: 1.25rem;
+$spacing: 0.9375rem;
+$nav: 4.375rem;
 
 /* Icons */
 $icon-size: 2em;
